# lang_agent

./: .gitignore  README.md  dev.md  pyproject.toml  run_app.py  설명.md
src/ai_agent/: __init__.py  ui.py
src/ai_agent/agents/: controller_agent.py  rag_agent.py  web_search_agent.py
src/ai_agent/config/: settings.py
src/ai_agent/core/: cache.py  document_manager.py  document_parser.py  embedding.py  vector_store.py
src/ai_agent/models/: state.py
src/ai_agent/utils/: tavily_search.py
src/backend/: app.py  app_streamlit.py  config.py
src/backend/agents/data_analysis/: __init__.py  graph.py  prompts.py  schemas.py  tools.py
src/backend/agents/orchestrator/: graph.py  prompts.py  schemas.py
tests/: run_tests.py  test_controller_agent.py  test_data_analysis_tools.py  test_document_manager.py  test_document_parser.py  test_embedding.py  test_vector_store.py  test_web_search_agent.py
uploads/: cafe.csv  test_data.csv  test_data.json
