[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_agent_system"
version = "0.1.0"
description = "A sophisticated multi-agent system using LangChain and LangGraph"
requires-python = ">=3.11"
authors = [
    {name = "Cesar Goncalves", email = "goncalves.cesaraugusto94@gmail.com"},
]
dependencies = [
    "langchain==0.3.25",
    "langchain-openai==0.2.0",
    "langchain-anthropic==0.1.1",
    "langgraph==0.3.0",
    "langchain-community==0.3.24",
    "sentence-transformers==3.2.1",
    "openai==1.78.1",
    "anthropic==0.25.1",
    "chromadb==0.6.3",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "tavily-python==0.7.2",
    "python-dotenv==1.1.0",
    "pre-commit==4.2.0",
    "pypdf2==3.0.1",
    "python-multipart==0.0.20",
    "rich==14.0.0",
    "aiofiles==23.2.1",
    "streamlit==1.22.0"
]



[tool.setuptools]
package-dir = {"" = "src"}
packages = ["backend", "backend.agents", "backend.utils"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
